--- a/app/src/main/res/layout/activity_monkey_free.xml
+++ b/app/src/main/res/layout/activity_monkey_free.xml
@@ -26,11 +26,26 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="30dp"
         android:fontFamily="serif"
-        android:text="The Monkey Mind Slipped Away!"
+        android:text="Oh No!"
+        android:textSize="22sp"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/monkeyFree"
+        app:layout_constraintTop_toBottomOf="@+id/monkeyFree" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="serif"
+        android:text="The Monkey Mind Slipped Away!"
         android:textSize="22sp"
-        app:layout_constraintHorizontal_bias="0.5" />
+        app:layout_constraintHorizontal_bias="0.523"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 </android.support.constraint.ConstraintLayout>
